rsworkspace/crates/trogon-decider/tests/ui/fail/double_given.stderr
error[E0599]: no method named `given` found for struct `TestCase<TestCommand, trogon_decider::testing::NoHistory>` in the current scope
  --> tests/ui/fail/double_given.rs:11:10
   |
 9 | /     TestCase::<TestCommand>::new()
10 | |         .given_no_history()
11 | |         .given([]);
   | |         -^^^^^ method not found in `TestCase<TestCommand, trogon_decider::testing::NoHistory>`
   | |_________|
   |
   |
   = note: the method was found for
           - `TestCase<C, trogon_decider::testing::Given<<C as Decider>::Event>>`
           - `TestCase<C>`
